rename and add new file

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -5,7 +5,7 @@
    "id": "c68438b2",
    "metadata": {},
    "source": [
-    "### Forest Fire Exploratory Data Analysis ###\n",
+    "### Forest Fire Exploratory Data Analysis & Data Wrangling ###\n",
     "\n",
     "\"The aim is to predict the burned area of forest fires, in the northeast region of Portugal, by using meteorological and other data\" - from dataset information\n",
     "\n",
