minor text changes

--- a/code/transform.ipynb
+++ b/code/transform.ipynb
@@ -5,7 +5,7 @@
    "id": "f117a929",
    "metadata": {},
    "source": [
-    "### Forest Fire Pre-Processing ###"
+    "### Forest Fire Data Wrangling"
    ]
   }
  ],
