--- a/code/explore.ipynb
+++ b/code/explore.ipynb
@@ -5,7 +5,7 @@
    "id": "c68438b2",
    "metadata": {},
    "source": [
-    "### Forest Fire Exploratory Data Analysis & Data Wrangling ###\n",
+    "### Forest Fire Exploratory Data Analysis\n",
     "\n",
     "\"The aim is to predict the burned area of forest fires, in the northeast region of Portugal\" - from UCI\n",
     "\n",
